[gd_scene load_steps=3 format=3 uid="uid://dkffk67dhg8sh"]

[ext_resource type="Script" path="res://UI/clock_time_selection.gd" id="1_iro4y"]
[ext_resource type="PackedScene" uid="uid://c13qwgoq1cfuc" path="res://UI/number_wheel/number_wheel.tscn" id="1_x6c0v"]

[node name="ClockTimeSelection" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -174.0
offset_right = 148.5
offset_bottom = 174.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iro4y")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 0.807843)

[node name="FirstNumber" parent="." instance=ExtResource("1_x6c0v")]
layout_mode = 1
offset_left = 92.5
offset_top = 99.0
offset_right = -179.5
offset_bottom = -154.0
maxValue = 2
currentValue = 0

[node name="SecondNumber" parent="." instance=ExtResource("1_x6c0v")]
layout_mode = 1
offset_left = 116.0
offset_top = 99.0
offset_right = -156.0
offset_bottom = -154.0
maxValue = 9
currentValue = 0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 146.0
offset_top = 130.0
offset_right = 186.0
offset_bottom = 156.0
text = ":"

[node name="ThirdNumber" parent="." instance=ExtResource("1_x6c0v")]
layout_mode = 1
offset_left = 159.0
offset_top = 99.0
offset_right = -113.0
offset_bottom = -154.0
maxValue = 5
currentValue = 0

[node name="FourthNumber" parent="." instance=ExtResource("1_x6c0v")]
layout_mode = 1
offset_left = 184.0
offset_top = 99.0
offset_right = -88.0
offset_bottom = -154.0
maxValue = 9
currentValue = 5

[node name="Submit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -68.0
offset_right = 31.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 0
text = "submit"

[node name="WaitUntil" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 30.0
offset_right = 85.0
offset_bottom = 56.0
grow_horizontal = 2
text = "Select time to wait for"
horizontal_alignment = 1

[connection signal="onNumberChange" from="FirstNumber" to="." method="_on_first_number_on_number_change"]
[connection signal="onNumberChange" from="SecondNumber" to="." method="_on_second_number_on_number_change"]
[connection signal="onNumberChange" from="ThirdNumber" to="." method="_on_third_number_on_number_change"]
[connection signal="onNumberChange" from="FourthNumber" to="." method="_on_fourth_number_on_number_change"]
[connection signal="pressed" from="Submit" to="." method="_on_submit_pressed"]
